--- a/kooplexhub/kooplex/hub/templates/project/settings.html
+++ b/kooplexhub/kooplex/hub/templates/project/settings.html
@@ -5,7 +5,7 @@
       <input type="hidden" name="project_id" value="{{ project.id }}">
       <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4>Setting of project <span style="font-weight: bold">{{ project.name }}</span></h4>
+        <h4>Settings of project <span style="font-weight: bold">{{ project.name }}</span></h4>
         <ul class="nav nav-tabs">
           <li class="active"><a href="#pane_collaboration-{{ project.id }}" data-toggle="tab">Collaboration</a></li>
           <li><a href="#pane_image-{{ project.id }}" data-toggle="tab">Image</a></li>
