--- a/kooplexhub/kooplex/hub/templates/project/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/project/project-partial.html
@@ -96,16 +96,19 @@
 
       {% endif %}  <!-- if running //-->
 
-        <a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can manage collaboration. You can change the image, modify volume attachments or delete the project here." data-placement="top">
-            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-          </button></a>
+
 
             <!-- GIT RELATED STUFF -->
 
         <a href="{% url 'project-versioncontrol' %}?project_id={{ project.id }}">
           <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Version control of your project {{ project.name }}. You can commit your changes, revert to a former commited state or pull remote changes" data-placement="top">
             <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
+          </button></a>
+          
+            <!-- Settings -->
+            <a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}">
+          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can manage collaboration. You can change the image, modify volume attachments or delete the project here." data-placement="top">
+            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
           </button></a>
 
 {% else %} 
