--- a/kooplexhub/kooplex/hub/templates/project/gitform.html
+++ b/kooplexhub/kooplex/hub/templates/project/gitform.html
@@ -5,10 +5,8 @@
 <nav class="navbar navbar-default">
    <!-- Collect the nav links, forms, and other content for toggling -->
    <ul class="nav nav-tabs">
-       <li><a href="{% url 'projects' %}" >Back to projects</a></li>
-
-       <li class=""><a href="#pane_commit" data-toggle="tab">Commit</a></li>
-       <li class="active"><a href="#pane_update" data-toggle="tab">Update</a></li>
+       <li class="active"><a href="#pane_commit" data-toggle="tab">Commit</a></li>
+       <li class=""><a href="#pane_update" data-toggle="tab">Update</a></li>
        <li><a href="#pane_revert" data-toggle="tab">Revert</a></li>
     </ul>
 </nav>
