--- a/kooplexhub/kooplex/hub/templates/project/commitform.html
+++ b/kooplexhub/kooplex/hub/templates/project/commitform.html
@@ -6,7 +6,7 @@
 
 <div class="panel-heading">
 <div style="display: inline-block;">
-      <h4>Commit changes for project <strong>tyjtjy</strong></h4>
+      <h4>Commit changes for project <strong>{{ project.name }}</strong> </h4>
     </div>
     <div style="float: right;">
       <a href="/hub/projects">
