show messages in login page

--- a/kooplexhub/kooplex/hub/templates/auth/passwordchange.html
+++ b/kooplexhub/kooplex/hub/templates/auth/passwordchange.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+
+{% if messages %}
+  {% include 'message.html' %}
+{% endif %}
+
+
 <h2>{{ title }}</h2>
 <div class="row">
     <div class="col-md-8">
