--- a/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
+++ b/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+
+{% if messages %}
+  {% include 'message.html' %}
+{% endif %}
+
+
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
