--- a/kooplexhub/kooplex/hub/templates/report/partial.html
+++ b/kooplexhub/kooplex/hub/templates/report/partial.html
@@ -17,7 +17,7 @@
             </a>
          </div>
 
-         <a data-toggle="collapse" href="#collapse{{ report_latest.id }}{{ pane }}" style="text-decoration: none; color: gray">
+         <a data-toggle="collapse" href="#collapse{{ report_latest.id }}" style="text-decoration: none; color: gray">
             <div class="col-md-11 col-sm-10">
               <span style="padding-left:20px;">
                 <strong>{{ report_latest.name  }}</strong>
@@ -35,12 +35,14 @@
 
     </div>
   </div>
-  <div id="collapse{{ report_latest.id }}{{ pane }}" class="panel-collapse collapse">
+  <div id="collapse{{ report_latest.id }}" class="panel-collapse collapse">
     <div class="panel-body">
       <div class="projects worksheet">
+{% comment %}
         <a href="{{ report_latest.url_ }}" target="_blank">
           <img src="{{ report_latest.picture }}"  style="max-height: 200px; max-width: 100%;">
         </a>
+{% endcomment %}
         <div class="well">
           <p><strong>Project description: </strong>{{ project.description }}
           <p><strong>Report description (latest): </strong>{{ report_latest.description }}
