--- a/kooplexhub/kooplex/hub/templates/report/reports.html
+++ b/kooplexhub/kooplex/hub/templates/report/reports.html
@@ -38,7 +38,7 @@
      {% endif %}
        {% for key, reports in reports_mine.items %}
          <div class="row">
-            {% include 'report/partial.html' with project=key.0 user_can_set=True %}
+            {% include 'report/partial.html' with project=key.0 reportname=key.1 %}
          </div>
        {% endfor %}
      </div>
@@ -46,7 +46,7 @@
      <div id="internalreports" class="tab-pane fade">
        {% for key, reports in reports_internal.items %}
          <div class="row">
-            {% include 'report/partial.html' with project=key.0 user_can_set=False %}
+            {% include 'report/partial.html' with project=key.0 reportname=key.1 %}
          </div>
        {% endfor %}
      </div>
@@ -57,7 +57,7 @@
      {% endif %}
      {% for key, reports in reports_public.items %}
          <div class="row">
-            {% include 'report/partial.html' with project=key.0 user_can_set=False %}
+            {% include 'report/partial.html' with project=key.0 reportname=key.1 %}
          </div>
      {% endfor %}
      </div>
