--- a/kooplexhub/kooplex/hub/templates/project/pane-image.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-image.html
@@ -3,7 +3,9 @@
 <label>Your choice for the new image:</label>
 <select id="project_images-{{ project.id }}" name="project_image">
   {% for image in images %}
-    <option value="{{ image.name }}" {% if project.image = image %} selected {% endif %}>{{ image }}</option>
+    {% if image.present %}
+      <option value="{{ image.name }}" {% if project.image = image %} selected {% endif %}>{{ image }}</option>
+    {% endif %}
   {% endfor %}
 </select>
 {% if project in running %}
