--- a/kooplexhub/kooplex/hub/templates/auth/login.html
+++ b/kooplexhub/kooplex/hub/templates/auth/login.html
@@ -31,6 +31,7 @@
                     <div class="col-md-offset-2 col-md-10">
                         <input type="hidden" name="next" value="{{ next_page }}" />
                         <input type="submit" value="Log in" class="btn btn-default" />
+                        <a type="button" class="btn btn-default" href="guestaccount">Register guest</a>
                         <a type="button" class="btn btn-default" href="passwordreset">Reset password</a>
                     </div>
                 </div>
