show hatml report password upon get url (not final)

--- a/kooplexhub/kooplex/hub/templates/report/reports.html
+++ b/kooplexhub/kooplex/hub/templates/report/reports.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
+{% if ask_for_password %}
+<div class="container" onmouseover="popup_password();">
+{% else %}
 <div class="container">
+{% endif %}
 
 <div class="row">
 <div class="col-md-12 col-sm-12 col-xs-12">
@@ -66,5 +70,13 @@
  </div>
  
 </div>
+
+{% if ask_for_password %}
+<script type="text/javascript">
+function popup_password() {
+  $('#report-password-' + {{ ask_for_password }}).modal('show');
+}
+</script>
+{% endif %}
 
 {% endblock %}
