--- a/kooplexhub/kooplex/hub/templates/project/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/project/project-partial.html
@@ -8,7 +8,7 @@
   <div class="panel-heading" style="padding: 5px 5px;">
 <div class="row">
     <div class="col-md-1 col-sm-2">
-    <a href="{% url 'container-open' %}?project_id={{ project.id }}" target="_blank">
+    <a href="{% url 'container-open' %}?project_id={{ project.id }}&pane={{ this_pane }}" target="_blank">
       <button role="button" type="button" class="btn btn-success" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> Open</span>
       </button>
@@ -31,7 +31,7 @@
   <div class="panel-heading" style="padding: 5px 5px;">
   <div class="row">
     <div class="col-md-1 col-sm-2">
-    <a href="{% url 'container-start' %}?project_id={{ project.id }}">
+    <a href="{% url 'container-start' %}?project_id={{ project.id }}&pane={{ this_pane }}">
       <button role="button" type="button" class="btn btn-default" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-play" aria-hidden="true"> Start</span>
       </button>
@@ -66,7 +66,7 @@
 {% if not publicvar %}
       {% if project in running  %}
 
-        <a href="{% url 'container-delete' %}?project_id={{ project.id }}">
+        <a href="{% url 'container-delete' %}?project_id={{ project.id }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
           </button></a>
@@ -74,14 +74,14 @@
           <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
           </button></a>
-        <a href="{% url 'notebook-publishform' %}?project_id={{ project.id  }}">
+        <a href="{% url 'notebook-publishform' %}?project_id={{ project.id  }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Publish project: {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
           </button></a>
 
       {% else %}  <!-- if running //-->
 
-        <a href="{% url 'container-start' %}?project_id={{ project.id }}">
+        <a href="{% url 'container-start' %}?project_id={{ project.id }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </button></a>
@@ -100,7 +100,7 @@
 
             <!-- GIT RELATED STUFF -->
 
-        <a href="{% url 'project-versioncontrol' %}?project_id={{ project.id }}">
+        <a href="{% url 'project-versioncontrol' %}?project_id={{ project.id }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Version control of your project {{ project.name }}. You can commit your changes, revert to a former commited state or pull remote changes" data-placement="top">
             <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
           </button></a>
@@ -114,7 +114,7 @@
 {% else %} 
       {% if project in running  %}
 
-        <a href="{% url 'container-delete' %}?project_id={{ project.id }}">
+        <a href="{% url 'container-delete' %}?project_id={{ project.id }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
           </button></a>
@@ -123,7 +123,7 @@
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
           </button></a>
       {% else %}  <!-- if running //-->
-        <a href="{% url 'container-start' %}?project_id={{ project.id }}">
+        <a href="{% url 'container-start' %}?project_id={{ project.id }}&pane={{ this_pane }}">
           <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </button></a>
