tab aware reporting. not really has any effect yet

--- a/kooplexhub/kooplex/hub/templates/report/password.html
+++ b/kooplexhub/kooplex/hub/templates/report/password.html
@@ -3,6 +3,7 @@
     <form id="report-password-form-{{ r.id }}" class="form-horizontal" action="{% url 'report-open' %}" method="post">
       {% csrf_token %}
       <input type="hidden" name="report_id" value="{{ r.id }}">
+      <input type="hidden" name="pane" value="{{ this_pane }}">
       <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4>Report <strong>{{ r.name }} [{{ r.pretty_ts }}]</strong></h4>
