--- a/kooplexhub/kooplex/hub/templates/report/settings.html
+++ b/kooplexhub/kooplex/hub/templates/report/settings.html
@@ -7,7 +7,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4>Setting of report <strong>{{ r.name }} [{{ r.pretty_ts }}]</strong></h4>
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#pane_scope-{{ r.id }}" data-toggle="tab">Scope</a></li>
+          <li class="active"><a href="#pane_scope-{{ r.id }}" data-toggle="tab">Scope and password</a></li>
           <li><a href="#pane_description-{{ r.id }}" data-toggle="tab">Description</a></li>
           <li><a href="#pane_deletion-{{ r.id }}" data-toggle="tab">Deletion</a></li>
         </ul>
@@ -18,11 +18,13 @@
             <p>The current scope is <strong>{{ r.scope }}</strong>.
             <hr>
             <label>Scope</label>
-            <select name = "scope">
+            <select name="scope">
               <option value="private" {% if r.scope.name == 'private' %} selected {% endif %}>private</option>
               <option value="internal" {% if r.scope.name == 'internal' %} selected {% endif %}>internal</option>
               <option value="public" {% if r.scope.name == 'public' %} selected {% endif %}>public</option>
-            </select>
+            </select><br>
+            <label>Password</label>
+            <input name="password" value="{{ r.password }}">
           </div>
           <div id="pane_description-{{ r.id }}" class="tab-pane fade">
             <p>You can update the description here.</p>
